--- a/profiles/templates/profiles/cards/player/video_card.html
+++ b/profiles/templates/profiles/cards/player/video_card.html
@@ -1,5 +1,5 @@
 {% load i18n %}
-
+{% load playmaker %}
 <div class="card">
     <div class="card-body">
         <h2 class="card-title">{% trans 'Video' %}</h2>
@@ -8,10 +8,26 @@
 
         <div class="card-text text-center">
 
-            {% if show_user.profile.video_url%}
-                <iframe  style="min-height:400px;" height="100%" width="100%" src="{{ show_user.profile.video_url }}"> </iframe>
+            {% if show_user.profile.video_url %}
+           
+                <iframe  style="min-height:400px;" height="100%" width="100%" src="{{ show_user.profile.video_url|convert_to_embeded }}"> </iframe>
                 <h3>{{ show_user.profile.video_title }}</h3>
                 <p>{{ show_user.profile.video_description }}</p>
+
+                {% if show_user.profile.video_url_second %}
+
+                    <iframe  style="min-height:400px;" height="100%" width="100%" src="{{ show_user.profile.video_url_second|convert_to_embeded }}"> </iframe>
+                    <h3>{{ show_user.profile.video_title_second }}</h3>
+                    <p>{{ show_user.profile.video_description_second }}</p>
+
+                {% endif %}
+                {% if show_user.profile.video_url_third %}
+
+                    <iframe  style="min-height:400px;" height="100%" width="100%" src="{{ show_user.profile.video_url_third|convert_to_embeded }}"> </iframe>
+                    <h3>{{ show_user.profile.video_title_third  }}</h3>
+                    <p>{{ show_user.profile.video_description_third  }}</p>
+
+                {% endif %}
             {% else %}
                 <span class="heading text-muted"> 
                   {% trans 'Jeszcze nie dodałeś filmu. Zrób to zwiększyć swoją widoczność' %}
