--- a/users/templates/account/partials/_signup.html
+++ b/users/templates/account/partials/_signup.html
@@ -26,7 +26,7 @@
                   <option value="T" {% if role == 'T'%} selected {% endif %}>Trener</option>
                   <option value="C" {% if role == 'C'%} selected {% endif %}>Klub / Szkółka piłkarska</option>
                   <option value="M" {% if role == 'M'%} selected {% endif %}>Agent piłkarski</option>
-                  <option value="S" {% if role == 'S'%} selected {% endif %}>Skout</option>
+                  <option value="S" {% if role == 'S'%} selected {% endif %}>Skaut</option>
                   <option value="R" {% if role == 'R'%} selected {% endif %}>Rodzic małego piłkarza</option>
                   <option value="G" {% if role == 'G'%} selected {% endif %}>Kibic / Rodzic</option>
                 </select>
