--- a/profiles/templates/profiles/cards/player/about_card.html
+++ b/profiles/templates/profiles/cards/player/about_card.html
@@ -23,8 +23,8 @@
 
             <div class="card-text">
             <h2 class="mt-3 card-title">{% trans 'Współpraca' %} </h2>
-                {% include template with key=_('Imie i nazwisko trenera')  value=profile.address|default:'-'         %}
-                {% include template with key=_('Adres ')                   value=profile.address|default:'-'         %}
+                {% include template with key=_('Imie i nazwisko trenera')  value=profile.traing|default:'-'         %}
+                
             </div>  <!-- end of card-text-->
         </div>
     </div>
