missing name modal

--- a/profiles/templates/profiles/requests.html
+++ b/profiles/templates/profiles/requests.html
@@ -18,284 +18,122 @@
 
 {% block content %}
 <section id="tables" class="tables" style="background-color:#fff;margin-top:5px">
-{% csrf_token %}
-<div class="container" data-aos="fade-up"> 
+  {% csrf_token %}
+  <div class="container" data-aos="fade-up"> 
 
+        <ul class="nav nav-tabs" id="myTab" role="tablist">
+            {% for tab in tabs %}
+            <li class="nav-item" role="presentation">
+                <a class="nav-link {% if forloop.first %} active {% endif %}" id="{{ tab.name }}-tab" data-toggle="tab" href="#{{ tab.name }}" role="tab" aria-controls="{{ tab.name }}" aria-selected="true">
+                    {{ tab.title }}
 
-            <ul class="nav nav-tabs" id="myTab" role="tablist">
-                <li class="nav-item" role="presentation">
-                    <a class="nav-link active" id="home-tab" data-toggle="tab" href="#home" role="tab" aria-controls="home" aria-selected="true">
-                    
-                    {% if user.is_player %}
-                        Otrzymane zaproszenia na testy
-                    {% else %}
-                        Otrzymane zapytania
-                    {% endif %}
+                {% if tab.active_number != 0 %} 
+                    <span class="badge bg-info  badge-info">{{ tab.active_number }}</span> 
+                {% endif %} 
+                </a>
+            </li>
+            {% endfor %}
+        </ul>
 
-
-                    {% if rec_active %} <span class="badge bg-info  badge-info">{{ rec_active }}</span> {% endif %} 
-                    </a>
-                </li>
-                <li class="nav-item" role="presentation">
-                    <a class="nav-link" id="profile-tab" data-toggle="tab" href="#profile" role="tab" aria-controls="profile" aria-selected="false">
-                    
-                    {% if user.is_player %}
-                        Wysłane zapytanie o testy do klubu
-                    {% else %}
-                        Wysłane zaproszenia
-                    {% endif %}
-                    {% if send_active %} <span class="badge bg-info  badge-info">{{ send_active }}</span> {% endif %} 
-                    
-                    </a>
-                </li>
-
-            </ul>
-            {% comment %} <h3>
-                Obserwowani użytkownicy
-            </h3> {% endcomment %}
-
-            
-<div class="tab-content mt-4" id="myTabContent">
-  <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
-
-
-            {% comment %} 
-            <h3>
-            {% if user.is_player %}
-                Otrzymane zaproszenia na testy
-            {% else %}
-                Otrzymane zapytanie o testy
-            {% endif %}
-            </h3> {% endcomment %}
-
-        {% for object in page_obj_recipient %}
-        <div class="card item-card" style="">
-            <div class="card-header d-md-none">
-                <span> 
-                    <img class="flag" src="{{ object.sender.profile.country.flag }}" alt="flag">
-                    {{object.sender.first_name|upper}} {{ object.sender.last_name|upper}} 
-                </span>
-                
-                <span class="float-right"> 
-                    {% profile_link object.sender checks=False text='profil' %}
-                </span>
-            </div>
-            
-            <div class="d-md-none">
-                <img class="avatar rounded-circle img-responsive" src="{% thumbnail object.sender.picture|default:'default_profile.png' 'tables_avatar_show_small' %}">
-            </div>
-
-            <div class="card-body table-item"> 
-            <div class="row no-gutters">
-                    <div class="d-none d-md-inline col-md-3">
-                        <a href={{object.sender.profile.get_permalink }}>
-                            <img class="avatar rounded img-responsive" src="{% thumbnail object.sender.picture|default:'default_profile.png' 'tables_avatar_show_medium' %}">
-                            <img class="flag" src="{{ object.sender.profile.country.flag }}" alt="flag">
-                            {{object.sender.first_name|upper}} {{ object.sender.last_name|upper}} 
-                        </a>
-                    </div>
-
-                    <div class="d-none d-md-inline col-md">
-                             
-                        <button disabled  
-                        {% if object.is_active %}
-                        class="btn btn-sm btn-warning"
-                        {% elif object.status == object.STATUS_ACCEPTED %}
-                        class="btn btn-sm btn-success"
-                        {% elif object.status == object.STATUS_REJECTED %}
-                        class="btn btn-sm btn-danger "
-                        {% endif %}>
-                            {{ object.status|default:'-'|upper  }}
-                        </button>
+        <div class="tab-content mt-4" id="myTabContent">    
+            {% for tab in tabs %}
+                <div class="tab-pane fade show {% if forloop.first %} active {% endif %}" id="{{ tab.name }}" role="tabpanel" aria-labelledby="{{ tab.name }}-tab">
+                    {% for object in tab.objects %}
+                    <div class="card item-card">
+                        <div class="card-header d-md-none">
+                            <span> 
+                                <img class="flag" src="{{ object.sender.profile.country.flag }}" alt="flag">
+                                {{object.sender.first_name|upper}} {{ object.sender.last_name|upper}} 
+                            </span>
+                            
+                            <span class="float-right"> 
+                                {% profile_link object.sender checks=False text='profil' %}
+                            </span>
+                        </div>
                         
+                        <div class="d-md-none">
+                            <img class="avatar rounded-circle img-responsive" src="{% thumbnail object.sender.picture|default:'default_profile.png' 'tables_avatar_show_small' %}">
+                        </div>
 
-                    </div >
+                        <div class="card-body table-item"> 
+                            <div class="row no-gutters">
+                                <div class="d-none d-md-inline col-md-3">
+                                    <a href={{object.sender.profile.get_permalink }}>
+                                        <img class="avatar rounded img-responsive" src="{% thumbnail object.sender.picture|default:'default_profile.png' 'tables_avatar_show_medium' %}">
+                                        <img class="flag" src="{{ object.sender.profile.country.flag }}" alt="flag">
+                                        {{object.sender.first_name|upper}} {{ object.sender.last_name|upper}} 
+                                    </a>
+                                </div>
 
-                    <div class="col-12 col-md-3"> 
-               
-                        {{ object.body|default:''  }}
-                     
-                    </div>
+                                <div class="d-none d-md-inline col-md">
+                                        
+                                    <button disabled  
+                                    {% if object.is_active %}
+                                    class="btn btn-sm btn-warning"
+                                    {% elif object.status == object.STATUS_ACCEPTED %}
+                                    class="btn btn-sm btn-success"
+                                    {% elif object.status == object.STATUS_REJECTED %}
+                                    class="btn btn-sm btn-danger "
+                                    {% endif %}>
+                                        {{ object.status|default:'-'|upper  }}
+                                    </button>
+                                    
 
-                    <div class="col-3 col-md"> 
-                        {{ object.created_at|date:'Y-m-d H:i'  }}
-                    </div>
+                                </div>
 
-                    <div class="d-none d-md-inline col-md">
-                        <span class="float-right"> 
-                            {% comment %} {% profile_link object.sender checks=False text='profil' %} {% endcomment %}
-                             {% if object.is_active %}
-                                {% update_request_button object accept=True %}
-                                {% update_request_button object accept=False %}
-                            {% endif %}
-                        </span>
-
-                    </div>
-                </div>
-            </div>
-            <div class="card-footer  d-md-none">
-                <span class="float-right"> 
-
-
-                        <button disabled  
-                        {% if object.is_active %}
-                        class="btn btn-sm btn-warning"
-                        {% elif object.status == object.STATUS_ACCEPTED %}
-                        class="btn btn-sm btn-success"
-                        {% elif object.status == object.STATUS_REJECTED %}
-                        class="btn btn-sm btn-danger "
-                        {% endif %}>
-                            {{ object.status|default:'-'|upper  }}
-                        </button>
-                    
-                    {% if object.is_active %}
-                        {% update_request_button object accept=True %}
-                        {% update_request_button object accept=False %}
-                    {% endif %}
-            </div>
-        </div> 
-        {% empty %}
-
-            <div class="col text-center">
-                {% include 'platform/partials/_empty.html' with position='center' %}
-
-                {% if user.is_player %}
-                <h4>Jeszcze nie otrzymałeś żadnego zaproszenia na testy</h4>
-                
-                <p>Trenerzy w na platformie maja możliwość wysłać Ci zaproszenie na testy. Powjawią się one tutaj.</p>
-                {% elif  user.is_coach or user.is_club %}
-                <h4>Jeszcze nie otrzymałeś żadnego zapytania o testy od piłkarzy</h4>
-                
-                <p>Piłkarze na naszej platformie mogą wysłać zapytanie o możliwość odbycia testów wraz ze swoimi danymi kontaktowymi.</p>
-                {% else %}
-                <h4>Jeszcze nie otrzymałeś żadnego zapytania</h4>
-                
-                <p></p>
-         
-                {% endif %}
-            </div>
-
-
-        {% endfor %}
-
-</div> <!-- tab end -->
-<div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab">
-
-
-
-        {% comment %} <h3 class="mt-4">
-            {% if user.is_player %}
-                Wysłane zapytanie o testy do klubu
-            {% else %}
-                Wysłane zaproszenia na testy do piłkarzy
-            {% endif %}
-        </h3> {% endcomment %}
-  
-        {% for object in page_obj_sender %}
-        <div class="card item-card" style="">
-            <div class="card-header d-md-none">
-                <span> 
-                    <img class="flag" src="{{ object.recipient.profile.country.flag }}" alt="flag"> 
-                    {{object.recipient.first_name|upper}} {{ object.recipient.last_name|upper}}
-                </span>
-                <span class="float-right"> 
-                 {% profile_link object.recipient checks=False text='profil' %}
-                 </span>
-            </div>
-            <div class="d-md-none">
-                <img class="avatar rounded-circle img-responsive" src="{% thumbnail object.recipient.picture|default:'default_profile.png' 'tables_avatar_show_small' %}">
-            </div>
-            <div class="card-body table-item"> 
-            <div class="row no-gutters">
-                    <div class="d-none d-md-inline col-md-3">
-                        <a href={{object.recipient.profile.get_permalink }}>
-                            <img class="avatar rounded img-responsive"  src="{% thumbnail object.recipient.picture|default:'default_profile.png' 'tables_avatar_show_medium' %}">
-                            <img class="flag" src="{{ object.recipient.profile.country.flag }}" alt="flag"> 
-                            {{object.recipient.first_name|upper}} {{ object.recipient.last_name|upper}} 
-                        </a>
-                    </div>
-
-                    <div class="d-none d-md-inline col-md">
-                             
-                        <button disabled  
-                        {% if object.is_active %}
-                        class="btn btn-sm btn-warning"
-                        {% elif object.status == object.STATUS_ACCEPTED %}
-                        class="btn btn-sm btn-success"
-                        {% elif object.status == object.STATUS_REJECTED %}
-                        class="btn btn-sm btn-danger "
-                        {% endif %}>
-                            {{ object.status|default:'-'|upper  }}
-                        </button>
+                                <div class="col-12 col-md-3"> 
                         
+                                    {{ object.body|default:''  }}
+                                
+                                </div>
 
-                    </div >
+                                <div class="col-3 col-md"> 
+                                    {{ object.created_at|date:'Y-m-d H:i'  }}
+                                </div>
 
-                    <div class="col-12 col-md-3"> 
-                        
-                        {{ object.body|default:''  }}
-                        
-                    </div>
+                                <div class="d-none d-md-inline col-md">
+                                    <span class="float-right"> 
+                                        {% comment %} {% profile_link object.sender checks=False text='profil' %} {% endcomment %}
+                                        {% if object.is_active %}
+                                            {% update_request_button object accept=True %}
+                                            {% update_request_button object accept=False %}
+                                        {% endif %}
+                                    </span>
 
-                    <div class="col-3 col-md"> 
-                        {{ object.created_at|date:'Y-m-d H:i'  }}
-                    </div>
- 
-                    <div class="d-none d-md-inline col-md">
-                        <span class="float-right"> 
-                            {% profile_link object.recipient checks=False text='profil' %}
-                        </span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="card-footer  d-md-none">
+                            <span class="float-right"> 
+                                    <button disabled  
+                                    {% if object.is_active %}
+                                    class="btn btn-sm btn-warning"
+                                    {% elif object.status == object.STATUS_ACCEPTED %}
+                                    class="btn btn-sm btn-success"
+                                    {% elif object.status == object.STATUS_REJECTED %}
+                                    class="btn btn-sm btn-danger "
+                                    {% endif %}>
+                                        {{ object.status|default:'-'|upper  }}
+                                    </button>
+                                
+                                {% if object.is_active %}
+                                    {% update_request_button object accept=True %}
+                                    {% update_request_button object accept=False %}
+                                {% endif %}
+                            </span>
+                        </div>
+                    </div> 
+                    {% empty %}
 
-                    </div>
-                </div>
-            </div>
-            <div class="card-footer  d-md-none">
-                <span class="float-right"> 
-                     <button disabled  
-                        {% if object.is_active %}
-                        class="btn btn-sm btn-warning"
-                        {% elif object.status == object.STATUS_ACCEPTED %}
-                        class="btn btn-sm btn-success"
-                        {% elif object.status == object.STATUS_REJECTED %}
-                        class="btn btn-sm btn-danger "
-                        {% endif %}>
-                            {{ object.status|default:'-'|upper  }}
-                        </button>
+                        <div class="col text-center">
+                            {% include 'platform/partials/_empty.html' with position='center' text_header=tab.empty.text_header text_body=tab.empty.text_body %}
+                        </div>
+                    {% endfor %}
+                </div> <!-- tab end 1 -->
+            {% endfor %}
+        </div>
 
-            
-            </div>
-        </div> 
-        {% empty %}
-
-
-
-            <div class="col text-center">
-                
-                {% include 'platform/partials/_empty.html' with position='center' %}
-
-                {% if user.is_player %}
-                <h4>Jeszcze nie wysłałęś żadnego zapytania</h4>
-                
-                <p>Będąc zweryfikowanym użytkownikiem platformy możesz wysyłać zapytania o testy do wybranych przez Ciebie trenerów. 
-                Uzupełniony profil w raz z pełnymi danymi kontaktowymi pozwoli na sprawny kontakt z Trenerem. </p>
-                {% elif  user.is_coach or user.is_club %}
-                <h4>Jeszcze nie zaprosiłeś żadnego piłkarza na testy</h4>
-                
-                <p>Będąc zweryfikowanym użytkownikiem platformy możesz zapraszać piłkarzy na testy. 
-                By ułatwić kontakt zapraz po wysłaniu takiego zapytania piłkarz otrzyma kontakt do Ciebie. </p>
-                
-                {% else %}
-                <h4>Jeszcze nie wysłałeś żadnego zapytania</h4>
-                
-                <p></p>
-         
-                {% endif %}
-            </div>
-        {% endfor %}
-
-  </div><!-- end of tabs-->
-</div>  <!-- end of tabs-->
+    </div>  <!-- end of conatiner-->
 </section>
 {% endblock content %}
-
 {% endspaceless %}
