--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -96,7 +96,7 @@
               </ul>
             
               <div class="btn-wrap">
-                <a href="www.playmaker.pro/scouting/" class="btn-buy">zobacz więcej</a>
+                <a href="/scouting/" class="btn-buy">zobacz więcej</a>
               </div>
             </div>
           </div>
@@ -142,7 +142,7 @@
               </ul>
             
               <div class="btn-wrap">
-                <a href="www.playmaker.pro/scouting/semi-pro" class="btn-buy">zobacz więcej</a>
+                <a href="/scouting/semi-pro/" class="btn-buy">zobacz więcej</a>
               </div>
             </div>
 
