--- a/profiles/templates/profiles/requests.html
+++ b/profiles/templates/profiles/requests.html
@@ -90,7 +90,7 @@
                                 <div class="col-3 col-md"> 
                                     {{ object.created_at|date:'Y-m-d H:i'  }}
                                 </div>
-
+                                {% if tab.actions %}
                                 <div class="d-none d-md-inline col-md">
                                     <span class="float-right"> 
                                         {% comment %} {% profile_link object.sender checks=False text='profil' %} {% endcomment %}
@@ -101,8 +101,10 @@
                                     </span>
 
                                 </div>
+                                {% endif %}
                             </div>
                         </div>
+                        {% if tab.actions %}
                         <div class="card-footer  d-md-none">
                             <span class="float-right"> 
                                     <button disabled  
@@ -122,6 +124,7 @@
                                 {% endif %}
                             </span>
                         </div>
+                        {% endif %}
                     </div> 
                     {% empty %}
 
